ch21/lab/todo-list/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
  labels:
    kiamol: ch21-lab
