ch21/lab/todo-list/todo-web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: todo-web
  namespace: todo
  labels:
    kiamol: ch21-lab
  annotations:
    kubernetes.io/ingress.class: contour-external
spec:
  rules:
  - host: todo.kiamol.local
    http:
      paths:
      - path: /
        backend:
          serviceName: todo-web
          servicePort: 80
